# Discipleship-app-onboarding

./: .gitignore  README.md
backend/: .env.example  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py
backend/app/: config.py  db.py  main.py  models.py  schemas.py  security.py
backend/app/api/: admin.py  auth.py  deps.py  matches.py  profiles.py  relationships.py  requests.py
backend/app/matching/: __init__.py  categories.py  embeddings.py  matcher.py  stages.py
backend/app/scripts/: seed.py
frontend/: DEPLOY.md  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  api.js  index.css
frontend/src/components/: AdminMenteesTab.jsx  AdminMentorsTab.jsx  AdminQueueTab.jsx  AdminReportsTab.jsx  CommunityTab.jsx  DiscoverTab.jsx  HomeTab.jsx  MainShell.jsx  MentorMenteesTab.jsx  MentorOnboarding.jsx  MentorRequestsTab.jsx  MentorsTab.jsx  ProfileTab.jsx  TabBar.jsx  Views.jsx  Visual.jsx
